# C-LichessBot

./: .gitignore  CMakeLists.txt  lichessBot.h  playGames.cpp  playGames.h
src/: apiInteraction.cpp  apiInteraction.h  engine.cpp  engine.h  globals.h  lichessBot.cpp  lichessBot.h  playGames.cpp  playGames.h
tests/: alphabeta.cpp  bestcaptures.cpp  evaluations.cpp  mateinone.cpp
